--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="description" content="Odros.com | Virtual Fairs">
+        <meta name="description" content="Virtual Fairs">
         <meta name="keywords" content="Virtual Fairs, Virtual, Fairs, Odors">
         <meta name="author" content="Mazajnet">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -33,7 +33,7 @@
         <link href="%PUBLIC_URL%/assets/css/chat.css" rel="stylesheet">
 
         <noscript id="jss-insertion-point"></noscript>
-        <title>Odros | Virtual Fairs</title>
+        <title>Virtual Fairs</title>
     </head>
     <body>
         <noscript>
